--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 					modData.unshift(d);
 				});
 				var chart = c3.generate({
-					bindto: d3.select(#timeseries),
+					bindto: d3.select('#timeseries'),
 					data: {
 						json:modData,
 						keys: {
