--- a/index.html
+++ b/index.html
@@ -66,11 +66,11 @@
 					},
 					tooltip: {
 						format: {
-							title: function (d) { return modData[d]['Year'] + " Total: " + d3.format(",")(modData[d]['Total']); }
+							title: function (d) { return modData[d]['Year'] + " Total Population: " + d3.format(",")(modData[d]['Total']); }
 						}
 					},
 					title: {
-						text: currentData + ' Insurance Coverage 2014-2017'
+						text: currentData + ' Health Insurance Coverage of the Total Population 2014-2017'
 					},
 					zoom: {
 						enabled: true
